// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/AddExperience renders empty result 1`] = `
<div>
  <div
    class="css-zbfoeb"
  >
    <label
      class="css-185rjq0"
    >
      Sök yrken:
    </label>
    <input
      class="css-ull5e5"
      name="search"
    />
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`views/AddExperience should render with taxonomy query result 1`] = `
<div>
  <div
    class="css-zbfoeb"
  >
    <input
      class="css-ull5e5"
      name="search"
      placeholder="Sök yrken"
    />
  </div>
</div>
`;
